<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_padding"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPrimaryDNSTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_padding"
                android:text="@string/primary_dns_is" />

            <TextView
                android:id="@+id/tvPrimaryDNS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/primary_dns" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSecondaryDNSTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_padding"
                android:text="@string/secondary_dns_is" />

            <TextView
                android:id="@+id/tvSecondaryDNS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/secondary_dns" />

        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvProxyIpTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/small_padding"
                    android:text="@string/proxy_ips_is" />

                <TextView
                    android:id="@+id/tvProxyIp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/proxy_ips" />
            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvLocalIpTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_padding"
                android:text="@string/local_ip_is" />

            <TextView
                android:id="@+id/tvLocalIp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/local_ip" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvGatewayTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/small_padding"
                android:text="@string/gateway_is" />

            <TextView
                android:id="@+id/tvGateway"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/gateway" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>