<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".qr.QRCreator">

    <androidx.cardview.widget.CardView
        android:id="@+id/ivQRCodeCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="10dp"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/ivQRCode"
            android:layout_margin="@dimen/extra_padding"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/generated_qr_code"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_padding"
        android:text="@string/share_vpn_configuration"
        android:textSize="@dimen/settings_fragment_title_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/shareVpnCongiguration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/shareVpnCongiguration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/extra_padding"
        android:gravity="center"
        android:paddingStart="@dimen/extra_padding"
        android:paddingEnd="@dimen/extra_padding"
        android:text="@string/scan_the_qr_code_description"
        app:layout_constraintBottom_toTopOf="@+id/ivQRCodeCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>